# llm-evaluation

./: .env.example  .gitignore  AI_Cache.json  CHANGELOG.md  CLAUDE.md  CLAUDE_EFFORT.md  Notebook.ipynb  README.md  diya_report.md  pyproject.toml  requirements.txt  run_manipulation.py
.claude/workflows/: eval-arch-analysis.js
Archive/: .gitignore  CHANGES.md  README.md  requirements.txt  run_eval.py  run_manipulation.py
Archive/Simpler Arch/: AI_Cache.json  RESULTS.md  cache.py  load_config.py  main.py  manipulation.py  pricing.py  pyrightconfig.json  ruff.toml  runner.py  scorers.py
Archive/evals/: schemas.py
Archive/results/: results_cache_20260506T042228Z.json
Archive/tests/: test_providers.py
Simpler Arch/: AI_Cache.json  README.md  cache.py  compare.py  main.py  manipulation.py  moral.py  run_manipulation.py  run_moral.py  runner.py  schemas.py  score_cache.py  scorers.py  test_providers.py
Simpler Arch/Output_Formats/: output_format.py
Simpler Arch/config/: config.yaml  pricing.yaml
evals/: cache.py  runner.py  schemas.py
latest/: .env.example  ARCHITECTURE_REVIEW.md  CODEBASE.md  __init__.py  cache.py  cli.py  env.py  ledger.py  loaders.py  lock.py  main.py  provenance.py  pyproject.toml  records.py  runlog.py
latest/analysis/: __init__.py  aggregate.py  report.py  score.py  stats.py
latest/collect/: __init__.py  _calls.py  benchmark.py  engine.py  judge.py  manipulation.py  moral.py  run.py
latest/config/: datasets.yaml  eval.yaml  loader.py  pricing.yaml  smoke.yaml  snapshots.lock.yaml
latest/data/: manipulation_attacks.jsonl  moral_scenarios.jsonl
latest/plan/: __init__.py  arms.py  design.py  freeze.py  order.py  wrong_answer.py
latest/providers/: __init__.py  anthropic.py  base.py  chat_completions.py  gemini.py  openai.py  retry.py  router.py  schema_util.py
latest/tests/: conftest.py  smoke_live.py  test_analysis.py  test_infra.py  test_live_smoke.py  test_offline.py  test_plan.py
(+51 files in other folders)
