[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "latest"
version = "0.1.0"
description = "Ledger-first LLM manipulation-resistance evaluation framework"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

# `pip install -e .` is optional — `pip install -r requirements.txt` + running from
# the repo root with `python -m latest.…` works without installing. This makes the
# `latest` package importable from anywhere and bundles the config/data files.

[tool.setuptools]
packages = [
    "latest",
    "latest.config",
    "latest.providers",
    "latest.plan",
    "latest.collect",
    "latest.analysis",
    "latest.tests",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
latest = ["config/*.yaml", "data/*.jsonl", ".env.example"]
